Testing regex speed from many sources
* Added default testing for C++ stdlib regex
* Added testing for regex C++ from stdlib with pre compiled rules
* Added testing for regex C code from https://github.com/kokke/tiny-regex-c
* Added testing for regex C library https://github.com/ximtech/Regex
* Added doxygen information
* Updated README.md file

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,11 @@
 *.exe
 *.out
 *.app
+
+bin
+results
+.vscode
+feeds/ximtech/checker_ximtech
+feeds/tiny-regex-c/checker_tiny-regex-c
+feeds/stdlib-compiled/checker_stdlib-compiled
+repo
