Big code refactoring
* Changed build system
* Reduced code duplication
* Make class Base abstract
* Add checker - matching metric - for testing regex process

--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,6 @@
 bin
 results
 .vscode
-feeds/ximtech/checker_ximtech
-feeds/tiny-regex-c/checker_tiny-regex-c
-feeds/stdlib-compiled/checker_stdlib-compiled
+feeds/?*/checker*
+feeds/?*/src/checker*
 repo
