Added Google RE2 library
* Fixed using test names - now used from Makefile $(NAME)
* Fixed fPIC option

--- a/feeds/boost/Makefile
+++ b/feeds/boost/Makefile
@@ -1,6 +1,6 @@
-NAME=boost-compiled
+NAME=boost
 REPO=https://github.com/boostorg/regex.git
-REPO_BUILD=mkdir -p $(DIR_BIN) && cd $(DIR_BIN) && cmake ../$(DIR_REPO) && make;
+REPO_BUILD=$(BUILD_CMAKE)
 REPO_LINKING=-Irepo/include
 
 include ../build.mk
