--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,9 +2,9 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "develop_normalized_checks" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "develop_normalized_checks" ]
 
 jobs:
   build:
